--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,16 @@
     "trailingSlash": false,
     "rewrites": [
       { "source": "/", "destination": "/index.html"}
+    ],
+    "headers": [
+      {
+        "source": "/(.*)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
+      }
     ]
   }
